# toy-language

./: .gitignore  .gitkeep  CMakeLists.txt  README.md  TODO.md  append_buffer.hpp  ast.cpp  ast.hpp  ast2.cpp  ast2.hpp  ast2_attach.hpp  ast2_helper.hpp  ast_attach.hpp  ast_data_structure.cpp  ast_data_structure.hpp  ast_fmt.hpp  ast_gen.cpp  ast_gen.hpp  ast_helper.hpp  ast_pool.cpp  ast_server.cpp  ast_server.hpp  build-all.ps1  common.cpp  common.hpp  config.cpp  config.hpp  config.toml  container.hpp  error.cpp  error.hpp  global_data.cpp  global_data.hpp  identifier_pool.cpp  init.cpp  init.hpp  interpreter.cpp  job_server.cpp  job_server.hpp  keyword_hashes.txt  (+40 more)
ast/: ast_common.hpp  ast_data_structure.cpp  ast_data_structure.hpp  ast_fmt.cpp  ast_fmt.hpp  ast_gen.cpp  ast_gen.hpp  ast_raw.hpp  postfix_to_prefix_access_pattern.txt
core/: alloc_pool.cpp  ast.cpp  ast_attach.hpp  ast_helper.hpp  ast_pool.cpp  closure_pool.cpp  comp_heap.cpp  comp_values.cpp  config.cpp  config.hpp  core.cpp  core.hpp  error.hpp  error_sink.cpp  foreign_function_interface.cpp  global_value_pool.cpp  global_value_pool2.cpp  handle_pool.cpp  identifier_pool.cpp  interpreter.cpp  interpreter2.cpp  lexical_analyser.cpp  opcode_pool.cpp  parse.cpp  partial_value_pool.cpp  pass_data.hpp  read.cpp  scope_pool.cpp  shadow_store.cpp  source_reader.cpp  structure.hpp  temp_stack.cpp  token.cpp  type_list_pool.cpp  type_pool.cpp  type_pool2.cpp  typechecker.cpp  value_pool.cpp
core/ffi_native/: x64_sysv_perform_native_call.s  x64_win32_perform_native_call.asm
diag/: diag.cpp  diag.hpp  inc.hpp  print_ast.cpp  print_config.cpp  print_opcodes.cpp  print_type.cpp
evl/: evl_data_structure.cpp  evl_data_structure.hpp  evl_gen.cpp  evl_gen.hpp
infra/: alloc_pool.cpp  alloc_pool.hpp  assert.hpp  common.cpp  common.hpp  container.hpp  hash.hpp  host_compiler.hpp  inplace_sort.hpp  math.hpp  minos.cpp  minos.hpp  minos_linux.cpp  minos_win32.cpp  opt.hpp  optptr.hpp  panic.hpp  range.hpp  template_helpers.hpp  threading.hpp  tree_schema.hpp  types.hpp
infra/container/: id_map.hpp  index_map.hpp  reserved_heap.hpp  reserved_vec.hpp
infra/format/: format.cpp  format.hpp  format_builtins.cpp
infra/minos/: minos.hpp  minos_linux.cpp  minos_win32.cpp
infra/print/: print.cpp  print.hpp  print_builtins.cpp
infra/toml/: toml.cpp  toml.hpp
infra/tree_schema/: tree_schema.cpp  tree_schema.hpp
nms/: nms_gen.cpp  nms_gen.hpp
pass/: ast.hpp  identifier_pool.cpp  parse.cpp  pass_data.cpp  pass_data.hpp  read.cpp
sample/: config-silent.toml  config.toml  full-source.evl  import.evl  source.evl  std.evl
sample/gems/: iterable-trait.evl  lowering.evl  nested-mixed-scopes.evl  nested-scopes.evl  recursive-type-func.evl  simple-self-dependent-value-struct.evl  type-recursion-in-signature.evl
sample/std/: prelude.evl  std.evl
spec/: respec.txt  spec.txt
test/: CMakeLists.txt  ast2_tests.cpp  ast_tests.cpp  ffi_test.c  helpers.cpp  helpers.hpp  integration_tests.cpp  main.cpp  minos_tests.cpp  test_container.cpp  test_global_data.cpp  test_global_data.hpp  test_helpers.cpp  test_helpers.hpp  test_main.cpp  test_process_helper.cpp  test_threading.cpp  tests.hpp  type_pool2_tests.cpp  type_pool_tests.cpp
test/integration-test-sources/: README.md  add-overflow-s8.evl  add-overflow-u64.evl  add.evl  capturing-templated-nested-function-immediate-call.evl  circular-type-embedded.evl  circular-type-via-pointer.evl  closed-over-value.evl  config-failure.toml  config-success.toml  create-single-member-composite-default-initializer.evl  create-single-member-composite-named-initializer-out-of-range.evl  create-single-member-composite-named-initializer-wrong-type.evl  create-single-member-composite-named-initializer.evl  create-single-member-composite-unnamed-initializer-out-of-range.evl  create-single-member-composite-unnamed-initializer-wrong-type.evl  create-single-member-composite-unnamed-initializer.evl  definition-argument-type-and-value.evl  definition-argument-type-mut.evl  definition-argument-type-only.evl  definition-argument-value-only.evl  ffi-many-args.evl  ffi-no-args.evl  ffi-two-args.evl  loop-copy-array.evl  loop-read-array.evl  loop-write-array.evl  loop.evl  mul-overflow-s16.evl  mul-overflow-u64.evl  mul.evl  return-from-nested.evl  return.evl  shadow-and-normal-member.evl  shadow-member-composite-copy.evl  shadow-member.evl  sliced-array-literal-in-call.evl  sliced-array-literal-in-templated-call.evl  sub-mismatched-types.evl  trait-call-chained-impls.evl  (+58 more)
test/integration_test_sources/: uf_assert-false.evl  ut_assert_true.evl  ut_bitwise_and.evl
test/minos_fs_data/: medium_file
tok/: tok_gen.cpp  tok_gen.hpp  token_gen.cpp  token_gen.hpp
util/: bytevec.hpp  file.cpp  file.hpp  minimal_os.hpp  ownptr.hpp  refptr.hpp  slice.hpp  status.cpp  status.hpp  str.hpp  strutil.hpp  strview.hpp  types.hpp  vec.hpp
